<resources>
    <string name="app_name">CoffiCup</string>
    <string name="profile">Profile</string>
    <string name="feedback">Feedback</string>
    <string name="cart">Cart</string>
    <string name="cafe_name">CoffiCup</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="menu_item_image" />
    <string name="success">success</string>
    <string name="checkout_success">Checkout Success!</string>
    <string name="cafe_logo">logo</string>
</resources>